# thi_lunar_challenge

./: .dockerignore  .gitignore  Dockerfile  README.md
docs/: architecture.md  asset_sources.md  luna_world_generation_pipeline.md  public_release_manifest.md  public_release_process.md  setup_wsl_docker.md
ros2_ws/src/rover_autonomy/: package.xml  setup.py
ros2_ws/src/rover_autonomy/launch/: autonomy_controller.launch.py  lidar_control.launch.py  scan_rays.launch.py
ros2_ws/src/rover_autonomy/rover_autonomy/: autonomy_controller.py  lidar_control.py  scan_rays.py
ros2_ws/src/rover_description/: CMakeLists.txt  package.xml
ros2_ws/src/rover_description/meshes/visual/: arm_visual_simplified.glb  body_visual_simplified.glb  wheel_visual_simplified.glb
ros2_ws/src/rover_description/urdf/: student_rover.urdf.xacro
ros2_ws/src/rover_gazebo/: package.xml  setup.cfg  setup.py
ros2_ws/src/rover_gazebo/assets/luna/rock/: apollo_sample20.bbox.json  apollo_sample20.glb  lunalab_boulder1.bbox.json
ros2_ws/src/rover_gazebo/config/: rover_controllers.yaml
ros2_ws/src/rover_gazebo/launch/: gazebo_rover.launch.py  gazebo_rover_gui_rviz_rays.launch.py  gazebo_rover_participant.launch.py  scan_rays.launch.py
ros2_ws/src/rover_gazebo/models/luna_rock_apollo_sample20/: model.config
ros2_ws/src/rover_gazebo/models/luna_rock_boulder1/: model.config
ros2_ws/src/rover_gazebo/models/luna_sky_starfield/: model.config
ros2_ws/src/rover_gazebo/models/luna_terrain_scene_02/: lunar_scene_02_terrain.mtl  model.config
ros2_ws/src/rover_gazebo/rover_gazebo/: cmd_vel_relay.py  odom_relay.py  rover_remote_control.py  scan_rays.py
ros2_ws/src/rover_gazebo/rviz/: participant_rover.rviz  rover.rviz
ros2_ws/src/rover_gazebo/worlds/: competition_luna_scene_01.sdf  competition_luna_scene_02.sdf  moon_rover_basic.sdf
scripts/: build_gazebo_image.sh  check_setup.sh  exec_in_gazebo_container.sh  generate_luna_scene_01_assets.py  generate_luna_scene_02_assets.py  push_gazebo_image.sh  run_competition_luna_participant.sh  (+6 more)
(+2 files in other folders)
