<?xml version="1.0"?>
<package format="3">
  <name>rover_autonomy</name>
  <version>0.1.0</version>
  <description>Simple rover autonomy examples for the THI rover simulation.</description>
  <maintainer email="todo@example.com">THI Rover</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
