<?xml version="1.0"?>
<package format="3">
  <name>rover_description</name>
  <version>0.1.0</version>
  <description>Simple student rover URDF/Xacro description.</description>
  <maintainer email="todo@example.com">THI Rover</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
