<?xml version="1.0"?>
<package format="3">
  <name>rover_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo Sim launch and utilities for the student rover.</description>
  <maintainer email="todo@example.com">THI Rover</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rover_description</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
